feat: restart button

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   </head>
   <body>
     <canvas id="myCanvas" width="480" height="320"></canvas>
-    <button id="runButton">Start game</button>
+    <div class="button-container">
+      <button id="runButton">Start game</button>
+      <button id="restartButton">Restart game</button>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
